<resources>
    <string name="app_name">PureWei</string>
    <string name="lable_detail">Detail</string>
    <string name="label_user">User</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- home -->
    <string name="action_search">搜索</string>
    <string name="action_notification">通知</string>
    <string name="action_around">周边</string>
    <string name="action_favorite">收藏</string>
    <string name="action_draft">草稿</string>
    <string name="action_home">主页</string>
    <string name="action_hot">热门</string>
    <string name="action_special_focus">特别关注</string>
    <string name="action_stars">名人明星</string>
    <string name="action_group">管理分组</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_settings">设置</string>
    <string name="action_follow">关注</string>
    <string name="action_cancel_follow">取消关注</string>


    <!-- user -->
    <string name="title_followers">粉丝</string>
    <string name="title_friends">关注</string>
    <string name="title_weibo">微博</string>

    <!-- detail -->
    <string name="action_comment">评论</string>
    <string name="action_retweet">转发</string>
    <string name="action_copy">复制</string>
    <string name="action_share">分享</string>

    <!-- settings -->
    <string name="title_account">帐号</string>
    <string name="action_account_manager">帐号管理</string>

    <string name="title_system">系统</string>
    <string name="action_read_settings">阅读设置</string>
    <string name="action_notification_settings">通知设置</string>

    <string name="title_others">其他</string>
    <string name="action_clear_cache">清除缓存</string>
    <string name="action_about">关于</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
