<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/ic_hot"
            android:title="@string/action_hot" />
        <item
            android:id="@+id/nav_around"
            android:icon="@drawable/ic_around"
            android:title="@string/action_around" />
        <item
            android:id="@+id/nav_special_focus"
            android:title="@string/action_special_focus" />
        <item
            android:id="@+id/nav_stars"
            android:title="@string/action_stars" />

    </group>

    <group
        android:id="@+id/menu_group_weibo"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/action_favorite" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_box"
            android:title="@string/action_draft" />
    </group>

    <group
        android:id="@+id/menu_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_group"
            android:title="@string/action_group" />
        <item
            android:id="@+id/nav_night_mode"
            android:icon="@drawable/ic_night_mode"
            android:title="@string/action_night_mode" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
