<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_cover"
        android:src="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_14dp"
        android:paddingLeft="@dimen/app_margin_14dp"
        android:paddingRight="@dimen/app_margin_14dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImg_avatars"
            android:layout_width="@dimen/icon_medium_width"
            android:layout_height="@dimen/icon_medium_height"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txt_user_name"
            style="@style/baseTextView.emphasizeText.large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin_14dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txt_user_description"
            style="@style/baseTextView.normal.small"
            android:layout_marginTop="@dimen/app_margin_14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/include_divider_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/app_margin_14dp"
            android:layout_marginBottom="@dimen/app_margin_14dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="@drawable/divider_multi_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <TextView
                    android:text="@string/title_followers"
                    style="@style/baseTextView.additional.medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txt_followers_count"
                    style="@style/baseTextView.emphasizeText.small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <TextView
                    android:text="@string/title_friends"
                    style="@style/baseTextView.additional.medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txt_friends_count"
                    style="@style/baseTextView.emphasizeText.small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <TextView
                    android:text="@string/title_weibo"
                    style="@style/baseTextView.additional.medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txt_weibo_count"
                    style="@style/baseTextView.emphasizeText.small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/include_divider_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/app_margin_14dp"
            android:layout_marginBottom="@dimen/app_margin_14dp"/>

    </LinearLayout>



</LinearLayout>